# eikaiwa

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  TESTING.md  UI_IMPROVEMENTS.md  docker-compose.dev.yml  docker-compose.yml  eisakubun.md  instructions.md  package-lock.json  package.json  prompts.py  run_tts_test.sh  simple_tts_test.py  test_tts.html  test_tts.py  test_tts_complete.html
.github/: copilot-instructions.md
backend/: .dockerignore  Dockerfile  config.py  credentials.json.example  dev.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt
backend/services/: __init__.py  ai_service.py  listening_service.py  translation_service.py  tts_service.py
backend/tests/: README.md  test_main.py  test_prompts.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  App.test.js  index.css
frontend/src/components/AnimatedBackground/: AnimatedBackground.css  AnimatedBackground.js
frontend/src/components/ChatBox/: ChatBox.css  ChatBox.js  index.js
frontend/src/components/ErrorBoundary/: ErrorBoundary.css  ErrorBoundary.js  index.js
frontend/src/components/GeminiChat/: GeminiChat.css  GeminiChat.js  index.js
frontend/src/components/Header/: Header.css  Header.js
frontend/src/components/InputArea/: InputArea.css  InputArea.js  index.js
frontend/src/components/InstantTranslation/: AnswerInput.js  InstantTranslation.css  InstantTranslation.js  ProblemDisplay.js  ResultDisplay.js  SettingsPanel.js  index.js
frontend/src/components/ListeningMode/: ListeningAnswer.js  ListeningMode.css  ListeningMode.js  ListeningProblem.js  ListeningResult.js  (+2 more)
frontend/src/hooks/: useAnswerChecker.js  useApi.js  useChat.js  useInstantTranslation.js  useInstantTranslationSettings.js  useKeyboardShortcuts.js  useListeningAnswer.js  useListeningProblem.js  useProblemManager.js  useSettings.js  useSettings.new.js  useTheme.js  useVoiceInput.js  useVoiceOutput.js
frontend/src/styles/: design-system.css
frontend/src/utils/: api.backup.js  api.js  api.new.js  constants.js  constants_backup.js  constants_new.js  errorHandling.js  performance.js  speechCleaningTest.js
(+28 files in other folders)
