[project]
name = "eikaiwa-backend"
version = "0.1.0"
description = "FastAPI backend for English Communication App - AI-powered English learning for Japanese speakers"
# readme = "../README.md"  # コメントアウト: Dockerビルド時にREADMEが見つからない問題を回避
requires-python = ">=3.11"
authors = [
    { name = "Eikaiwa App Team" }
]
keywords = ["fastapi", "english-learning", "ai", "gemini", "tts", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

# Core dependencies for the application
dependencies = [
    "fastapi>=0.104.0",           # Modern web framework
    "uvicorn[standard]>=0.24.0",  # ASGI server with auto-reload
    "python-dotenv>=1.0.0",       # Environment variable management
    "google-generativeai>=0.3.0", # Google Gemini AI API
    "google-cloud-texttospeech>=2.16.0", # Google Cloud TTS
    "pydantic>=2.0.0",            # Data validation
]

# Optional dependencies for development and formatting
[project.optional-dependencies]
dev = [
    "black>=23.0.0",              # Code formatting
    "pytest>=7.0.0",              # Testing framework
    "pytest-asyncio>=0.21.0",     # Async testing support
]

# Build system configuration for uv
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Package build configuration
[tool.hatch.build.targets.wheel]
# Since we have a single main.py file, we'll include it directly
include = [
    "main.py",
    "dev.py",
    "tests/",
]

# Tool configurations
[tool.black]
line-length = 79                  # Match AGENTS.md requirement
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \_build
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
